[package]
name = "packetviper-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for PacketViper network analyzer"

[dependencies]
pnet = "0.35.0"
pnet_datalink = "0.35.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
maxminddb = "0.24"
dns-lookup = "2.0"